Docker dirty working